--- a/Acebook/Views/Shared/_Layout.cshtml
+++ b/Acebook/Views/Shared/_Layout.cshtml
@@ -29,6 +29,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Home</a>
                         </li>
                     </ul>
+                    <nav class="searchbar">
+                        <div class="nav-container">
+                            <!-- Search Form -->
+                            <form action="@Url.Action("SearchUser", "Users")" method="get" class="search-form">
+                                <input type="text" name="query" placeholder="Search username..." class="search-input" required>
+                                <button type="submit" class="search-button">Search</button>
+                            </form>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </nav>
