--- a/Acebook/Views/Shared/_Layout.cshtml.css
+++ b/Acebook/Views/Shared/_Layout.cshtml.css
@@ -50,3 +50,38 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
+.navbar .searchbar {
+  display: flex;
+  align-items: center;
+  margin-right: 1180px;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+}
+
+.search-input {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  margin-right: 0.5rem;
+}
+
+.search-button {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #fff;
+  background-color: #007bff;
+  border: 1px solid #007bff;
+  border-radius: 0.25rem;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
