resolved conflicts in AcebookDBContext

--- a/Acebook/Views/Shared/_Layout.cshtml
+++ b/Acebook/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/profile.css" />
     <link rel="stylesheet" href="~/css/posts.css" />
     <link rel="stylesheet" href="~/css/friendships.css" />
+    <link rel="stylesheet" href="~/css/comment.css" />
 
 </head>
 <body>
