All Like buttons now stay on the page after being pressed, not just redirecting to /posts

--- a/Acebook/Views/Posts/GetPost.cshtml
+++ b/Acebook/Views/Posts/GetPost.cshtml
@@ -40,7 +40,7 @@
                 @{
                     var dictLikeUnlike = ViewBag.LikeUnlike as Dictionary<int, List<int>>;
                 }
-                <form method="post" asp-controller="Likes" asp-action="LikePost" asp-route-postId="@ViewBag.Post.Id">
+                <form method="post" asp-controller="Likes" asp-action="LikePost" asp-route-postId="@ViewBag.Post.Id" asp-route-returnUrl="@ViewBag.CurrentURL">
                     @{
                         var likeOrUnlike =@ViewBag.PostLikeUnlike;
                     }
