--- a/Acebook/Views/Users/Profile.cshtml
+++ b/Acebook/Views/Users/Profile.cshtml
@@ -91,7 +91,6 @@
                             }
                         </a>
                         <p class="post-meta-profile">Posted on: @post.CreatedAt.ToString("MMMM dd, yyyy - hh:mm tt")</p>
-            @* ... *@
 
                         <div>
                             @{
@@ -105,15 +104,25 @@
                                     Console.WriteLine("view - dictLikeUnlike - NOT null");
                                 }
                             }
-                            
-                            <form method="post" asp-controller="Likes" asp-action="LikePost" asp-route-postId="@post.Id">
+
+
+                            <form method="post" asp-controller="Likes" asp-action="LikePost" asp-route-postId="@post.Id" asp-route-returnUrl="@ViewBag.CurrentURL">
                                 @{
-                                    bool hasLiked = dictLikeUnlike != null && dictLikeUnlike.ContainsKey(post.Id) && dictLikeUnlike[post.Id].Contains(ViewBag.CurrentUser.Id);
-                                    var likeOrUnlike = hasLiked ? "Unlike" : "Like";
+                                    //testing
+                                    Console.WriteLine("Current URL: " + ViewBag.CurrentURL);
+                                    //
+                                    string likeOrUnlike = "error"; // Default value
+                                    if (dictLikeUnlike != null)
+                                    {
+                                        bool hasLiked = dictLikeUnlike != null && dictLikeUnlike.ContainsKey(post.Id) && dictLikeUnlike[post.Id].Contains(ViewBag.currentUserId ); //  && dictLikeUnlike[post.Id].Contains(ViewBag.CurrentUser.Id) // ViewBag.currentUserId 
+                                        likeOrUnlike = hasLiked ? "Unlike" : "Like";
+                                    }
+                                    
                                 }
                                 <button type="submit" class="btn btn-primary">@likeOrUnlike</button>
-                                @* <button type="submit" class="btn btn-primary">testing</button> *@
                             </form>
+
+
                             <div class="reactions-profile">
                                 <div class="like-count">
                                     @{
@@ -124,20 +133,18 @@
                                                 <span>👍@likesCount[post.Id] likes</span>
                                             }
                                             else{
-                                                <span>👍-1 likes</span>
+                                                <span>👍-1 likes</span> // testing
                                             }
                                         }
                                         else 
                                         {
-                                            <span>👍-2 likes</span>
+                                            <span>👍-2 likes</span> // testing
                                         }
                                     }
                                 </div>
                             </div>    
-                        @* </div> *@
 
 
-            @* ... *@
                             <div class="comment-count">
                                 <span>0 comments</span> 
                             </div>
