--- a/Acebook/Views/Posts/Index.cshtml
+++ b/Acebook/Views/Posts/Index.cshtml
@@ -118,7 +118,7 @@
                                 <span>💬@commentsCount[post.Id] comments</span>
                             }
                             else{
-                                <span>👍0 comments</span>
+                                <span>💬0 comments</span>
                             }
                         }
                         else 
