--- a/Acebook/Views/Posts/GetPost.cshtml
+++ b/Acebook/Views/Posts/GetPost.cshtml
@@ -3,12 +3,20 @@
 
 @{
     var errorMessage = TempData["ErrorMessage"];
+    var successMessage = TempData["SuccessMessage"];
 }
 
 @if (errorMessage != null)
 {
     <div class="alert alert-danger text-center">
         @errorMessage
+    </div>
+}
+
+@if (successMessage != null)
+{
+    <div class="alert alert-success text-center">
+        @successMessage
     </div>
 }
 
@@ -106,7 +114,7 @@
                     </div>
                     @if (comment.UserId == Context.Session.GetInt32("user_id"))
                     {
-                        <form action="@Url.Action("Delete", "Comments", new { id = ViewBag.PostId, commentId = comment.Id })" method="post" style="display:inline;">
+                        <form method="post" action="/posts/@comment.PostId/comments/@comment.Id/delete">
                             <button type="submit" class="delete-button-post" onclick="return confirm('Are you sure you want to delete this comment?')">Delete Comment</button>
                         </form>
                     }
