--- a/Acebook/Views/Home/Index.cshtml
+++ b/Acebook/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="home">
     <div class="home-container" style="display: flex; justify-content: space-between; align-items: center;">
         <div class="home-box" style="flex: 1;">
-            <h1 id="greeting">Welcome To Acebook</h1>
+            <h1 id="greeting">Welcome To Spacebook</h1>
         </div>
         <div class="form-container" style="flex: 1;">
             <form class="login-form" asp-action="Create" asp-controller="Users" method="post">
@@ -14,23 +14,23 @@
                     <legend>Register Now</legend>
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
-                        <label class="control-label">Name</label>
-                        <input asp-for="FullName" class="form-control" />
+                        @* <label class="control-label">Name</label> *@
+                        <input asp-for="FullName" class="form-control" placeholder="Name"/>
                         <span asp-validation-for="FullName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">Username</label>
-                        <input asp-for="Name" class="form-control" />
+                        @* <label class="control-label">Username</label> *@
+                        <input asp-for="Name" class="form-control" placeholder="Username"/>
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
+                        @* <label asp-for="Email" class="control-label"></label> *@
+                        <input asp-for="Email" class="form-control" placeholder="Email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
+                        @* <label asp-for="Password" class="control-label"></label> *@
+                        <input asp-for="Password" class="form-control" placeholder="Password"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="form-group" style="display: flex; flex-direction: column; gap: 10px;">
