--- a/Acebook/wwwroot/css/site.css
+++ b/Acebook/wwwroot/css/site.css
@@ -22,6 +22,9 @@ body {
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 1em;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 .login-form legend {
@@ -138,3 +141,7 @@ body {
   color: #777;
 }
 
+.form-control::placeholder {
+  color: #888;
+  font-size: 14px;
+}
