Finish tests for UserManagement, fixed Posts and LandingPage

--- a/Acebook/Views/Users/Profile.cshtml
+++ b/Acebook/Views/Users/Profile.cshtml
@@ -21,6 +21,12 @@
         @errorMessage
     </div>
 }
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger text-center">
+        @TempData["ErrorMessage"]
+    </div>
+}
 <div class="profile-buttons">
     @if (Context.Session.GetString("Username") != null && Context.Session.GetString("Username") != Model.Name)
     {
